tests/paczka1/small_fuzzy/64273542.err
Error in line 2: Wy61L S869 87,1
Error in line 6: 3d0hBpbm7s S869 31,3
Error in line 4: uUQX7E S29 2,8
